--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <div class="main">
         <div class="picture1">
-            <img src="photo/feature-options.png" alt="feature-options">
+            <img src="feature-options.png" alt="feature-options">
         </div>
         <div class="content1">
             <h1>Fully Customisable</h1><br>
@@ -44,7 +44,7 @@
     </div>
     <div class="main">
         <div class="picture2">
-            <img src="photo/feature-drag.png" alt="feature-drag">
+            <img src="feature-drag.png" alt="feature-drag">
         </div>
         <div class="content2">
             <h1>Touch and Drag Support</h1><br>
@@ -54,7 +54,7 @@
     </div>
     <div class="main">
         <div class="picture3">
-            <img src="photo/feature-responsive.png" alt="feature-responsive">
+            <img src="feature-responsive.png" alt="feature-responsive">
         </div>
         <div class="content3">
             <h1>Fully Responsive</h1><br>
@@ -64,7 +64,7 @@
     </div>
     <div class="main"></div>
         <div class="picture4">
-            <img src="photo/feature-modern.png" alt="feature-modern">
+            <img src="feature-modern.png" alt="feature-modern">
         </div>
         <div class="content4">
             <h1>Modern Browsers</h1><br>
@@ -74,7 +74,7 @@
     </div>
     <div class="main"></div>
         <div class="picture5">
-            <img src="photo/feature-zombie.png" alt="feature-zombie">
+            <img src="feature-zombie.png" alt="feature-zombie">
         </div>
         <div class="content5">
             <h1>Zombie Browsers</h1><br>
@@ -83,7 +83,7 @@
     </div>
     <div class="main"></div>
         <div class="picture6">
-            <img src="photo/feature-module.png" alt="feature-module">
+            <img src="feature-module.png" alt="feature-module">
         </div>
         <div class="content6">
             <h1>Modules and Plugins</h1><br>
@@ -102,8 +102,8 @@
     <p class="line">Watch This space- we'll be launching soon:)</p>
     </div>
     <div class="footer">
-        <p class="dharvi">David Deutsch</p>
-        <img class="bird" src="photo/twitter_25.png" alt="bird_blue_32">
+        <p class="document">David Deutsch</p>
+        <img class="bird" src="twitter_25.png" alt="bird_blue_32">
     </div>
 </body>
 </html>
