--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </p>
     <div class="btn1"><p class="dow">Download</p></div>
     <div class="btn2"><p class="git">Github</p></div>
-    <img class="image" src="photo/owl-logo.png" alt="logo">
+    <img class="image" src="owl-logo.png" alt="logo">
     <p class="num">2.3.4</p>
     <p class="demo">Demo</p>
     <div class="main">
